# Track-Gym-Shop

./: .env-example  Dockerfile  Makefile  alembic.ini  pyproject.toml  setup.py  setup3.py
docker_compose/: app.yaml  pgadmin.yaml  redis.yaml  storages.yaml  telegram-bot.yaml
src/bot/: bot.py  settings.py
src/bot/handlers/: start_handler.py
src/bot/messages/: base.py  start.py
src/core/application/api/: main.py  router.py
src/core/application/api/v1/auth/: router.py  schemas.py
src/core/application/api/v1/operations/: router.py
src/core/configs/: __init__.py  auth.py  fastapi.py  pgadmin.py  postgres.py  redis.py  telegram.py
src/core/domain/entities/auth/: customers.py
src/core/domain/entities/shop/: category.py  product.py
src/core/domain/exceptions/: base.py  product.py
src/core/gateways/postgresql/: database.py
src/core/gateways/postgresql/alembic/: env.py
src/core/gateways/postgresql/alembic/versions/: a97ee03f69e3_added_relationships.py  cc1b3c31a5a6_initial.py  d60313f05e28_itinial.py
src/core/gateways/postgresql/auth/: auth.py  manager.py
src/core/gateways/postgresql/models/: base.py
src/core/gateways/postgresql/models/auth/: user.py
src/core/gateways/postgresql/models/operations/: operation.py
src/core/gateways/postgresql/models/shop/: association.py  category.py  product.py
src/core/gateways/postgresql/reposetories/shop/: category.py  product.py
src/core/gateways/redis/: cache_product.py  redis.py
src/core/logic/auth/: auth.py
src/core/logic/services/shop/: category.py  product.py
(+4 files in other folders)
